static/css/style.css
/* CSS Variables */
/* CSS Variables taken from my other project and adjusted for this project
https://github.com/JamesBracken/Ember-Ash
*/
:root {
    --clr-primary: #f2eee8;
    /* Isabeline */
    --clr-secondary: #e10a0a;
    /* Red*/
    --clr-tertiary: #6F6866;
    /* Fill out with tertiary color */
    --clr-black: #454545;
    /* Onyx */
    --clr-white: #ffffff;
    /* White */
    /* Headings */
    --text-primary: "Roboto", serif;
    /* Body text */
    --text-secondary: "Lato", serif;

    --fs-heading-1: 3.125rem;
    /* 50px */
    --fs-heading-2: 2.5rem;
    /* 40px */
    --fs-heading-3: 2.188rem;
    /* 35px */
    --fs-heading-4: 1.875rem;
    /* 30px */
    --fs-subheading: 1.25rem;
    /* 20px */
    --fs-body: 1rem;
    /* 16px */

    --fw-extra-bold: 800;
    --fw-bold: 700;
    --fw-semi-bold: 550;
    --fw-regular: 300;

    --border-radius: 10px;
    --box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
    --transition-duration: 0.3s;
}

/* GLOBAL STYLES */
/* setting all styles across the website here to increase uniformity
across the code and reduce unexpected behaviours and styles */

html {
    display: flex;
    justify-content: center;
}

/* Push the body below the header to make it visible */
body {
    padding-top: 100px;
    max-width: 1800px !important;
}

/* Push the home section up a bit to touch the header */
.home-section {
    margin-top: -15px;
}

h1 {
    font-size: var(--fs-heading-1) !important;
    font-family: var(--text-primary);
}

h2 {
    font-size: var(--fs-heading-2) !important;
    font-family: var(--text-primary);
}

h3 {
    font-size: var(--fs-heading-3) !important;
    font-family: var(--text-primary);
}

h4 {
    font-size: var(--fs-heading-4) !important;
    font-family: var(--text-primary);
}

.subheading {
    font-size: var(--fs-subheading) !important;
}

p {
    font-size: var(--fs-body) !important;
    font-family: var(--text-secondary) !important;
    font-weight: var(--fw-regular) !important;
}

input,
button,
select,
textarea {
    border: none;
    font: inherit;
    background: none;
}

ol,
li,
ul {
    list-style: none !important;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover,
button:hover {
    cursor: pointer;
}

*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img {
    object-fit: cover !important;
    width: 100% !important;
    border-radius: 0 !important;
}

hr {
    color: rgba(0, 0, 0, 0.4)
}

i {
    font-size: 40px;
    display: inline-block;
}

/* HEADER STYLES */

header {
    box-shadow: var(--box-shadow);
    padding: 0 !important;
}

.logo {
    font-size: var(--fs-heading-2);
    font-weight: var(--fw-semi-bold);
    font-style: italic;
}

.nav-link,
.footer-link {
    position: relative;
    display: inline-block;
}

.nav-link:after,
.footer-link:after {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0px;
    background-color: var(--clr-black);
    height: 1px;
    width: 0;
    transition: width 300ms;
}

.nav-link:hover:after,
.footer-link:hover:after {
    width: 100%;
}

.signup-button {
    padding: 8px 0;
}

/* Adding separate styles for the CTA to attract attention */
.cta-btn {
    margin: 0 !important;
    color: var(--clr-white);
    padding: 9px 24px;
    font-weight: var(--fw-semi-bold);
    background-color: #6F6866;
    border-radius: 0;
    border: 0;
}

.cta-btn:hover {
    background-color: #595352;
    transition: 500ms ease-out;
}

.cta-li-container {
    display: flex;
    align-items: center;
}


/* MAIN CONTENT STYLES */

.home-hero-img-container {
    height: 300px;
}

/* Home description cards  */
.home-descriptions-card {
    height: 200px;
}

@media screen and (min-width: 576px) {
    .home-descriptions-card {
        height: 280px;
    }

    .home-hero-img-container {
        height: 450px;
    }
}

@media screen and (min-width:768px) {
    .home-hero-img-container {
    height: 700px;
}
}

@media screen and (min-width:1024px) {
    .home-descriptions-card {
        height: 240px;
    }
}

@media screen and (min-width:1200px) {
    .home-descriptions-card {
        height: 200px;
    }
}

